--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ compiler:
 matrix:
   include:
     - os: osx
-      osx_image: xcode8
+      osx_image: xcode10.1
       env:
         - MATRIX_EVAL="brew install gcc && CC=gcc-6 && CXX=g++-6"
 
 before_install:
-  - brew update && brew upgrade
+  - brew update
   - brew uninstall --force cmake
   - eval "${MATRIX_EVAL}"
   - export CMAKE_EXTRA_ARGS="${CMAKE_EXTRA_ARGS} -DCMAKE_BUILD_TYPE=Coverage"
